# systemintegration_KEA

./: .gitignore  README.md  package-lock.json  package.json  systemintegration_KEA.sln
00.Assignments/01a Assignment/JS/: fileReader.js
00.Assignments/02a Assignment/node/: app.js
00.Assignments/03a_Assignment/data/: me.xml
00.Assignments/03a_Assignment/node/: app.js  fileReader.js  package-lock.json  package.json
00.Assignments/03a_Assignment/python/: main.py  pyproject.toml
00._Assignments/01a Assignment/JS/: main.js
00._Assignments/01a_Assignment/Py/: main.py  pyproject.toml
00._Assignments/03a_Assignment/py/: main.py  pyproject.toml
00._Assignments/04_Assignments/04a._SSE_Example/: 04a._SSE.py  pyproject.toml
00._Assignments/04_Assignments/04a._SSE_Example/templates/: index.html
00._Assignments/09a._Assignment/: Link to doc.txt
01._Miscellanious/: paymentiframe.html  steal_google.sh
02._Data_Files/: me.yaml
03._Modules/html_no_modules/: index.html  index.js  myModule.js
03._Modules/html_with_modules/: index.html  myModule.js
03._Modules/node_commonjs_modules/: index.js  myModule.js
03._Modules/node_es_modules/: index.js  myModule.js
03._Modules/python_modules/: main.py
04._Encoding_Decoding/node/: index.js
04._Encoding_Decoding/python/: main.py
05_Python_Environments/03._Poetry_Environment/: pyproject.toml
06._Servers/flask/: index.html  main.py
06._Servers/node/: app.js  package-lock.json  package.json
06._Servers/python/: main.py  pyproject.toml
08._Server-To-Server/node/: app.js
08._Server-To-Server/python/: main.py  pyproject.toml
09._Environment_Variables/node/: .env-dev  index.js  package.json
09._Environment_Variables/python/: main.py  pyproject.toml
10._Date/node/: index.js
10._Date/python/: main.py
11._Short_Polling/node/: app.js
12._Long_Polling/node/: app.js
13._Server-sent_Events/node/: app.js
14_Websockets/node/: client.js
16._CORS/: index.html
16._CORS/node/: app.js
16._CORS/python/: pyproject.toml
16._CORS/python-example/: main.py  pyproject.toml
17._Multipart-Form/: index.html
17._Multipart-Form/node/: app.js
17._Multipart-Form/python-fastapi/: file  main.py  pyproject.toml
18._Images/: Base64.html
19._Audio/: index.html
20._MPEG_DASH/: app.js  package.json  youtubevideo.html
23._Database_Migrations/node-knex/: knexfile.js  package-lock.json  package.json
23._Database_Migrations/python-alembic/: alembic.ini  pyproject.toml
23._Database_Migrations/python-alembic/alembic/versions/: 9e552a3e2fe9_create_account_table.py
24._Redis/: commands.md
26._Graphql/node/: app.js  package-lock.json  package.json
27._Web_Scraping_Crawling/Node/: index.html  index.js  package.json
27._Web_Scraping_Crawling/Scrapy_Basic/: pyproject.toml
27._Web_Scraping_Crawling/Scrapy_Wiki_Crawler/: pyproject.toml
27._Web_Scraping_Crawling/py/: main.py  pyproject.toml
(+82 files in other folders)
